--- a/i3blocks.conf
+++ b/i3blocks.conf
@@ -33,32 +33,32 @@ markup=none
 # The first parameter sets the step (and units to display)
 # The second parameter overrides the mixer selection
 # See the script for details.
-[volume]
-#label=VOL
-#label=♪
-label=
-instance=Master
-#instance=PCM
-interval=1
-signal=10
-command=/usr/lib/i3blocks/volume 5 pulse
-separator=false
-
-[volume]
-#label=VOL
-#label=♪
-label=
+# [volume]
+# #label=VOL
+# #label=♪
+# label=
 # instance=Master
-instance=PCM
-interval=1
-signal=10
-command=/usr/lib/i3blocks/volume 5 pulse
+# #instance=PCM
+# interval=1
+# signal=10
+# command=/usr/lib/i3blocks/volume 5 pulse
+# separator=false
+
+# [volume]
+# #label=VOL
+# #label=♪
+# label=
+# # instance=Master
+# instance=PCM
+# interval=1
+# signal=10
+# command=/usr/lib/i3blocks/volume 5 pulse
 
 # Memory usage
 #
 # The type defaults to "mem" if the instance is not specified.
 [memory]
-label=
+label=-
 separator=false
 interval=30
 
@@ -75,7 +75,7 @@ interval=30
 # (defaults to 10 for 10%).
 [disk]
 #label=HOME
-label=
+label=-
 #instance=/mnt/data
 interval=30
 
@@ -87,11 +87,11 @@ interval=30
 # instance=enp2s0f0
 color=#00FF00
 interval=10
-separator=false
+# separator=false
 
 [wifi]
 instance=wlp3s0
-label=
+label=-
 interval=10
 # separator=false
 
@@ -104,13 +104,12 @@ interval=10
 # The script may be called with -w and -c switches to specify thresholds,
 # see the script for details.
 [cpu_usage]
-label=
+label=-
 interval=10
-min_width=CPU: 100.00%
 #separator=false
 
 [load_average]
-label=
+label=-
 interval=10
 
 # Battery indicator
