--- a/config
+++ b/config
@@ -53,7 +53,7 @@ bindsym $mod+Shift+q kill
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
-bindsym $mod+d exec rofi -show run -lines 5 -eh 2 -width 100 -padding 500 -opacity "80" -bw 0 -bc "$base01" -bg "$base02" -fg "$base07" -hlbg "$base05" -columns 2 -font "System San Francisco Display 18" -hlfg "#9575cd"
+bindsym $mod+d exec --no-startup-id i3-dmenu-desktop --dmenu='rofi -dmenu -i -config $HOME/.config/rofi/config'
 #bindsym $mod+d exec --no-startup-id i3-demnu-desktop
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
@@ -113,21 +113,21 @@ bindsym $mod+a focus parent
 
 
 # Startup Programs
-  exec --no-startup-id nm-applet
+#   exec --no-startup-id nm-applet
   #exec --no-startup-id dunst
   #exec --no-startup-id dropbox
   #exec_always --no-startup-id feh --bg-scale ~/.wallpaper.png
 
-set $workspace1 "1: "
-set $workspace2 "2: "
-set $workspace3 "3: "
-set $workspace4 "4: "
-set $workspace5 "5: "
-set $workspace6 "6: "
-set $workspace7 "7: "
-set $workspace8 "8: "
-set $workspace9 "9: "
-set $workspace10 "10: "
+set $workspace1 "1: -"
+set $workspace2 "2: -"
+set $workspace3 "3: -"
+set $workspace4 "4: -"
+set $workspace5 "5: -"
+set $workspace6 "6: -"
+set $workspace7 "7: -"
+set $workspace8 "8: -"
+set $workspace9 "9: -"
+set $workspace10 "10: -"
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -154,7 +154,11 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 
-assign [class="Firefox"] $workspace1
+assign [class="Google-chrome"] $workspace10
+assign [class="Code"] $workspace2
+assign [class="Gnome-terminal"] $workspace1
+workspace $workspace10 output HDMI1
+workspace $workspace3 output VGA1
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -162,7 +166,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 # exit i3 (logs you out of your X session)
 bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -b 'Yes, exit i3' 'i3-msg exit'"
-bindsym $mod+Shift+x exec i3lock --color "$base01"
+bindsym $mod+Shift+x exec i3lock --color "$base01" -f -e
 
 # resize window (you can also use the mouse for that)
 mode "resize" {
@@ -196,7 +200,7 @@ bindsym $mod+r mode "resize"
 # Widow Colours
 #                         border  background text    indicator
   client.focused          $base01 $base01    $base07 $base0F
-  client.focused_inactive $base02 $base02    $base03 $base0F
+  client.focused_inactive   $base02 $base02    $base03 $base0F
   client.unfocused        $base02 $base02    $base03 $base0F
   client.urgent           $base02 $base08    $base00 $base0F
 
@@ -204,8 +208,9 @@ bindsym $mod+r mode "resize"
 
 bar {
         #status_command i3status
+        output VGA1
         status_command i3blocks -c ~/.config/i3/i3blocks.conf
-	font pango: System San Francisco Display, FontAwesome 12
+	font pango: FontAwesome, System San Francisco Display 8
         position bottom
         strip_workspace_numbers yes
         #bindsym button4 nop
@@ -224,27 +229,36 @@ bar {
 
 
 # Pulse Audio controls
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
+# bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+# bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+# bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 # Sreen brightness controls
-bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
-bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
+# bindsym XF86MonBrightnessUp exec xbacklight -inc 20 # increase screen brightness
+# bindsym XF86MonBrightnessDown exec xbacklight -dec 20 # decrease screen brightness
 
 # Touchpad controls
-bindsym XF86TouchpadToggle exec ~/.i3/toggletouchpad.sh # toggle touchpad
+# bindsym XF86TouchpadToggle exec ~/.i3/toggletouchpad.sh # toggle touchpad
 
 # Media player controls
-bindsym XF86AudioPlay exec playerctl play
-bindsym XF86AudioPause exec playerctl pause
-bindsym XF86AudioNext exec playerctl next
-bindsym XF86AudioPrev exec playerctl previous
+# bindsym XF86AudioPlay exec playerctl play
+# bindsym XF86AudioPause exec playerctl pause
+# bindsym XF86AudioNext exec playerctl next
+# bindsym XF86AudioPrev exec playerctl previous
 
 # Set wallpaper (need to install feh)
 #exec_always feh --bg-scale /path_to_image_file
 
 # Set display mode
-#exec_always xrandr --output Virtual1 --mode 1360x768
+exec --no-startup-id xrandr --output HDMI1 --right-of VGA1 --auto
+exec --no-startup-id setxkbmap -model abnt2 -layout br -variant abnt2
+exec --no-startup-id volumeicon
 
-exec_always compton -f
+for_window [title="Quick-Reply"] floating enable, resize set 240 180
+
+bindsym --release Print exec gnome-screenshot
+bindsym --release Mod1+Sys_Req exec gnome-screenshot -w
+bindsym --release Shift+Print exec gnome-screenshot -a
+bindsym --release Ctrl+Print exec gnome-screenshot -c
+bindsym --release Ctrl+Mod1+Sys_Req exec gnome-screenshot -w -c
+bindsym --release Ctrl+Shift+Print exec gnome-screenshot -a -c
